initial sign up form works

--- a/frontend/src/components/LoginFormPage/LoginFormPage.css
+++ b/frontend/src/components/LoginFormPage/LoginFormPage.css
@@ -1,4 +1,4 @@
-input {
+/* input {
     border: none;
     border-radius: 1em;
 
@@ -34,4 +34,4 @@ button {
 .login-button {
     background-color: darkgoldenrod;
     width: 50%;
-}
+} */
