added more styling to landing page

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -6,24 +6,56 @@
                 ". s3 s3 s3 s3 ."
                 ". s4 s4 s4 s4 .";
     row-gap: 3em;
+
+    font-family: "Ubuntu", sans-serif;
+
+    background-color: #494646;
+    color: whitesmoke;
 }
 
+.p-text {
+    font-size: 1.1em;
+}
+
+/* SECTION 1 */
 #section-1 {
     grid-area: s1;
     display: grid;
     grid-template:
-                "a b";
+    "a b";
     justify-items: center;
 }
 
 .s1-header-text {
     grid-area: a;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+}
+
+.s1-header-text > h1 {
+    font-size: 3em;
+    font-weight: bolder;
+}
+
+.s1-header-text > p {
+    font-size: 1em;
+}
+
+.landing-img {
+    width: 100%;
+}
+
+#section-1 > div {
+    width: 75%;
 }
 
 .s1-image {
     grid-area: b;
 }
 
+/* SECTION 2 */
 #section-2 {
     grid-area: s2;
     display: flex;
@@ -32,10 +64,25 @@
     text-align: center;
 }
 
+.s2-header-text > h2 {
+    font-size: 2em;
+}
+
+/*  SECTION 3 */
 #section-3 {
     grid-area: s3;
     display: flex;
     justify-content: space-evenly;
+}
+
+.s3-tile-header-text {
+    font-size: 1.5em;
+}
+
+.s3-tile-header-text:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    color: black;
 }
 
 #section-4 {
@@ -43,13 +90,4 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-
-#section-1 > div {
-    width: 50%;
-}
-
-.landing-img {
-    width: 100%;
 }
