added some styling

--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -82,7 +82,7 @@
 .s3-tile-header-text:hover {
     text-decoration: underline;
     cursor: pointer;
-    color: black;
+    color: #EBB45B;
 }
 
 #section-4 {
