--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,4 +2,9 @@ html, body {
     margin: 0;
     padding: 0;
     background-color: #494646;
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
 }
