working group listing structure

--- a/frontend/src/components/Listings/Listings.css
+++ b/frontend/src/components/Listings/Listings.css
@@ -5,6 +5,9 @@
     gap: 3em;
     align-items: center;
     height: fit-content;
+    position: sticky;
+    top: 10vh;
+    margin: 10 0vw;
 }
 
 .eg-link {
