--- a/frontend/src/components/GroupsListing/styles.css
+++ b/frontend/src/components/GroupsListing/styles.css
@@ -1,5 +1,8 @@
 .list-ctn {
-    margin: 10vw;
+    margin: 0 10vw;
+    display: flex;
+    flex-direction: column;
+    gap: 10vh;
 }
 
 .tile-link {
