--- a/frontend/src/components/Navigation/styles.css
+++ b/frontend/src/components/Navigation/styles.css
@@ -2,17 +2,19 @@
     background-color: #494646;
     display: flex;
     width: 100%;
+    height: 10vh;
     justify-content: space-between;
     align-items: center;
-    padding-right: 3em;
+    /* padding-right: 3em */
+    padding: 0 10vw;
     border-bottom: 3px solid lightgray;
-    margin-bottom: 5em;
+    box-sizing: border-box;
     position: fixed;
     top: 0;
 }
 
 .logo {
-    height: 10em;
+    max-height: 10vh;
 }
 
 .session-buttons-container {
@@ -27,8 +29,8 @@
     background-color: #969090;
     box-sizing: border-box;
     color: whitesmoke;
-    padding: 1em 2em;
-    height: 5em;
+    padding: 0.25em 0.5em;
+    height: 5vh;
     width: 10em;
     display: flex;
     justify-content: center;
