--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,7 +4,7 @@
 
 html, body {
     margin: 0;
-    padding: 0;
+    /* padding: 10vh 0 0 0; */
     background-color: #494646;
     scroll-behavior: smooth;
 }
