added some modal styling

--- a/frontend/src/components/LoginFormPage/LoginFormPage.css
+++ b/frontend/src/components/LoginFormPage/LoginFormPage.css
@@ -1,37 +1,47 @@
-/* input {
-    border: none;
-    border-radius: 1em;
-
-}
-
-button {
-    box-sizing: border-box;
-    background-color: transparent;
-    border: none;
-    border-radius: 1em;
-}
-
-.text {
-    color: darkgoldenrod;
-}
-
-.entry {
-    box-sizing: border-box;
-    display: flex;
-    width: 25%;
-    height: 3em;
-    border: 1px black solid;
-    padding: 0;
-}
-
 .LogInMod {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    background-color: #671c19;
+    /* gap: 1em; */
+    background-color: #969090;
+    padding: 1em;
 }
 
-.login-button {
-    background-color: darkgoldenrod;
-    width: 50%;
-} */
+.login-form {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+}
+
+.entry {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.entry > input {
+    border-radius: 1em;
+    border: none;
+    height: 2em;
+}
+
+.entry > span {
+    position: absolute;
+    right: 0.5em;
+    bottom: 0.25em;
+}
+
+.entry > span:hover {
+    cursor: default;
+}
+
+.login-btns {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
