--- a/frontend/src/components/Listings/Listings.css
+++ b/frontend/src/components/Listings/Listings.css
@@ -7,13 +7,19 @@
     height: fit-content;
     position: sticky;
     top: 10vh;
-    margin: 10 0vw;
+    z-index: 1;
+    background-color: #494646;
+    padding: 1em 0;
+    border-right: 5px solid #494646;
+    border-left: 5px solid #494646;
 }
 
 .eg-link {
+    height: fit-content;
     font-size: 32px;
     font-weight: 300;
     color: whitesmoke;
+    padding: 0;
 }
 
 .eg-link.active {
