--- a/frontend/src/components/GroupDetails/GroupDetails.css
+++ b/frontend/src/components/GroupDetails/GroupDetails.css
@@ -1,7 +1,31 @@
+.details-ctn {
+    display: flex;
+    flex-direction: column;
+}
+
 .back-to-groups {
     color: whitesmoke;
 }
 
-.details-s1 > div > img {
-    background-color: red;
+.details-s1 {
+    display: flex;
+    width: 100%;
+}
+
+.about-group {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: space-between;
+    word-wrap: break-word;
+}
+
+.group-img-ctn {
+    width: 50%;
+}
+
+.group-img-ctn > img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
 }
