--- a/frontend/src/components/GroupDetails/GroupDetails.css
+++ b/frontend/src/components/GroupDetails/GroupDetails.css
@@ -10,6 +10,7 @@
 .details-s1 {
     display: flex;
     width: 100%;
+    height: 50vh;
 }
 
 .about-group {
@@ -18,6 +19,8 @@
     width: 50%;
     justify-content: space-between;
     word-wrap: break-word;
+    box-sizing: border-box;
+    padding: 0 1em;
 }
 
 .group-img-ctn {
@@ -28,4 +31,10 @@
     width: 100%;
     height: 100%;
     object-fit: fill;
+}
+
+.details-events-ctn {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
