--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -3,45 +3,82 @@
     margin: 0 10%;
 }
 
+.back-to-events {
+    color: whitesmoke;
+}
+
 .event-details-s2 {
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-.main-event-img {
+.event-img-ctn {
     width: 50%;
+    height: 400px;
+}
+
+.event-img-ctn > img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
 }
 
 .group-event-info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
     width: 50%;
+    box-sizing: border-box;
+    padding: 1em;
+    gap: 1em;
 }
 
-.event-start-end {
-    width: 80%;
+.group-link {
     display: flex;
+    gap: 1em;
+    border: 1px solid whitesmoke;
+    border-radius: 1em;
+    padding: 1em;
+    box-sizing: border-box;
+    /* height: 50%; */
+}
+
+.group-link > img {
+    width: 100px;
+    height: 100px;
+}
+
+.event-info {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    border: 1px solid whitesmoke;
+    border-radius: 1em;
+    padding: 1em;
+    box-sizing: border-box;
+    /* height: 50%; */
+}
+
+.event-info > div {
+    display: flex;
+}
+
+.deet {
     justify-content: flex-start;
     align-items: center;
-    gap: 1em;
+    gap: 2em;
 }
 
-.time {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    gap: 1em;
+.fa-deet {
+    width: 1em;
 }
 
-.event-price {
+.event-time {
     display: flex;
     gap: 1em;
 }
 
-.event-type {
-    display: flex;
-    gap: 1em;
+.et {
+    width: 3em;
 }
