--- a/frontend/src/components/EventTile/EventTile.css
+++ b/frontend/src/components/EventTile/EventTile.css
@@ -1,11 +1,3 @@
-.tile-ctn {
-    border: 1px solid whitesmoke;
-    height: fit-content;
-    display: flex;
-    color: whitesmoke;
-
-}
-
 .tile-img {
     width: 20vw;
     height: 100%;
@@ -17,4 +9,21 @@
     align-items: center;
     width: fit-content;
     gap: 1em;
+}
+
+.tile-split {
+    border: 1px solid whitesmoke;
+    width: 100%;
+    margin: 1em 0;
+}
+
+.tile-ctn {
+    border: none;
+    height: fit-content;
+    display: flex;
+    gap: 1em;
+    color: whitesmoke;
+    box-sizing: border-box;
+    overflow-wrap: normal;
+    margin: 0 1em;
 }
