--- a/frontend/src/components/Navigation/styles.css
+++ b/frontend/src/components/Navigation/styles.css
@@ -5,7 +5,7 @@
     height: 10vh;
     justify-content: space-between;
     align-items: center;
-    /* padding-right: 3em */
+    z-index: 5;
     padding: 0 10vw;
     border-bottom: 3px solid lightgray;
     box-sizing: border-box;
