working on update form date values

--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -85,4 +85,10 @@
 
 .del-event {
     color: black;
+    /* width: 25%; */
+}
+
+.event-managament {
+    display: flex;
+    justify-content: center;
 }
