--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -88,7 +88,8 @@
     /* width: 25%; */
 }
 
-.event-managament {
+.event-btns {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
+    gap: 1em;
 }
