--- a/frontend/src/components/GroupTile/GroupTile.css
+++ b/frontend/src/components/GroupTile/GroupTile.css
@@ -11,6 +11,7 @@
 
 .tile-info {
     height: 100%;
+    width: 100%;
 }
 
 .tile-img-ctn {
@@ -20,5 +21,11 @@
 
 .members-type {
     display: flex;
+    gap: 1em;
+}
+
+.group-manage-btns {
+    display: flex;
+    justify-content: flex-end;
     gap: 1em;
 }
