--- a/frontend/src/components/EventTile/EventTile.css
+++ b/frontend/src/components/EventTile/EventTile.css
@@ -3,12 +3,18 @@
     height: 100%;
 }
 
-.date-time {
+.e-date-time {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: fit-content;
     gap: 1em;
+}
+
+.e-date-time > span {
+    font-family: 'Russo One', sans-serif;
+    font-weight: 100;
+    font-size: 2em;
 }
 
 .tile-ctn {
@@ -20,4 +26,37 @@
     box-sizing: border-box;
     overflow-wrap: normal;
     margin: 0 1em;
+}
+
+.e-tile-info {
+    width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    justify-content: space-between;
+}
+
+.e-tile-event-name {
+    padding: 0;
+    margin: 0;
+    font-family: 'Russo One', sans-serif;
+    font-weight: 100;
+    font-size: 2em;
+}
+
+.e-name-hosted {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.e-group-name {
+    font-family: 'Russo One', sans-serif;
+    font-weight: 100;
+    font-size: 1em;
+}
+
+.fa-date-time-dash {
+    font-size: 2em;
 }
