--- a/frontend/src/components/GroupDetails/GroupDetails.css
+++ b/frontend/src/components/GroupDetails/GroupDetails.css
@@ -38,9 +38,35 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
+    padding: 0 0 5vh;
 }
 
 .group-management {
     display: flex;
     gap: 1em;
+}
+
+.group-management > button {
+    border-radius: 1em;
+    height: 2em;
+}
+
+.group-management > button:hover {
+background-color: #EBB45B;
+}
+
+.g-info {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.g-info > p {
+    font-size: 1.5em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+}
+
+.g-about {
+    font-size: 1.5em;
 }
