--- a/frontend/src/components/LoginFormPage/LoginFormPage.css
+++ b/frontend/src/components/LoginFormPage/LoginFormPage.css
@@ -6,6 +6,7 @@
     /* gap: 1em; */
     background-color: #969090;
     padding: 1em;
+    border-radius: 1em;
 }
 
 .login-form {
@@ -54,4 +55,10 @@
 .login-button {
     width: 100%;
     font-size: 1em;
+    border-radius: 1em;
+    height: 2em;
+}
+
+.login-button:hover {
+    background-color: #EBB45B;
 }
