--- a/frontend/src/components/SignUpFormPage/SignUpFormPage.css
+++ b/frontend/src/components/SignUpFormPage/SignUpFormPage.css
@@ -43,4 +43,9 @@
 .submit-signup {
     width: 100%;
     height: 2em;
+    border-radius: 1em;
+}
+
+.submit-signup:hover {
+    background-color: #EBB45B;
 }
