--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,6 +18,15 @@ a {
     text-decoration: none;
 }
 
+img {
+    border-radius: 1em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Russo One', sans-serif;
+    font-weight: 100;
+}
+
 /* button, input, textarea, option {
     color: black;
 } */
