--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -65,6 +65,8 @@
     padding: 1em;
     box-sizing: border-box;
     /* height: 50%; */
+    font-size: 1.25em;
+    position: relative;
 }
 
 .event-info > div {
@@ -99,6 +101,15 @@
     display: flex;
     justify-content: flex-end;
     gap: 1em;
+    position: absolute;
+    bottom: 1em;
+    right: 1em;
+}
+
+.event-btns > button {
+    border-radius: 1em;
+    font-size: 1em;
+    padding: 10px;
 }
 
 .e-text {
