--- a/frontend/src/components/GroupTile/GroupTile.css
+++ b/frontend/src/components/GroupTile/GroupTile.css
@@ -29,3 +29,9 @@
     justify-content: flex-end;
     gap: 1em;
 }
+
+.fa-solid.fa-circle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
