--- a/frontend/src/components/SignUpFormPage/SignUpFormPage.css
+++ b/frontend/src/components/SignUpFormPage/SignUpFormPage.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 25vw;
+    width: 50%;
+    gap: 1em;
     background-color: #969090;
     border-radius: 3em;
     padding-bottom: 2em;
@@ -13,12 +14,15 @@
     flex-direction: column;
     align-items: center;
     gap: 1em;
-    width: 50%;
+    width: 75%;
 }
 
 .signup-input-field {
     width: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
 }
 
 .signup-input-field > input {
