changed most font colors to whitesmoke

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,12 @@
 * {
     font-family: 'Ubuntu', sans-serif;
-    /* color: whitesmoke; */
+    color: whitesmoke;
+}
+
+button, input, select, textarea, option,
+.menu > *,
+.profile-ctn > *{
+    color: black;
 }
 
 html, body {
