--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -73,6 +73,12 @@
     display: flex;
 }
 
+.g-name-g-privacy {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .deet {
     justify-content: flex-start;
     align-items: center;
@@ -113,7 +119,10 @@
 }
 
 .e-text {
-    color: black;
     font-size: 1.5em;
     font-weight: 500;
+}
+
+.e-text-header {
+    font-size: 2.5em;
 }
