converted citystate into a single input

--- a/frontend/src/components/CreateEventForm/styles.css
+++ b/frontend/src/components/CreateEventForm/styles.css
@@ -60,3 +60,17 @@
 .e-create-update:hover {
     background-color: #EBB45B;
 }
+
+@media screen and (max-width: 640px){
+
+    .sec {
+        width: 100%;
+    }
+    .form-question {
+        width: 100%;
+    }
+
+    .form-question + select {
+        width: 30%;
+    }
+}
