--- a/frontend/src/components/EventDetails/EventDetails.css
+++ b/frontend/src/components/EventDetails/EventDetails.css
@@ -126,3 +126,33 @@
 .e-text-header {
     font-size: 2.5em;
 }
+
+@media screen and (max-width: 640px) {
+    .details-ctn {
+        width: 100%;
+        margin: 0;
+        padding: 0 1em;
+    }
+
+    .event-details-s2 {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .event-img-ctn {
+        width: 100%;
+    }
+
+    .event-img-ctn > img {
+        object-fit: cover;
+        object-position: center;
+    }
+
+    .group-event-info {
+        width: 100%;
+    }
+
+    .group-link {
+        width: 100%;
+    }
+}
