--- a/frontend/src/components/GroupDetails/GroupDetails.css
+++ b/frontend/src/components/GroupDetails/GroupDetails.css
@@ -1,16 +1,24 @@
 .details-ctn {
     display: flex;
     flex-direction: column;
+    gap: 1em;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 .back-to-groups {
     color: whitesmoke;
+    margin: 1em 0 3em;
 }
 
 .details-s1 {
     display: flex;
     width: 100%;
     height: 400px;
+}
+
+.details-s2 {
+    height: fit-content;
 }
 
 .about-group {
@@ -76,4 +84,40 @@ background-color: #EBB45B;
     background-color: red;
     color: whitesmoke;
     font-size: 1.5em;
+}
+
+@media screen and (max-width: 640px) {
+
+    .details-ctn {
+        padding: 0 2em;
+    }
+
+    .details-s1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        height: fit-content;
+    }
+
+    .group-img-ctn {
+        width: 100%;
+    }
+
+    .about-group {
+        width: 100%;
+        padding: 0;
+    }
+
+    .group-management {
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 1em;
+    }
+
+    .details-s2 {
+        display: block;
+    }
 }
