--- a/frontend/src/components/GroupTile/GroupTile.css
+++ b/frontend/src/components/GroupTile/GroupTile.css
@@ -16,7 +16,12 @@
 
 .tile-img-ctn {
     width: 20vw;
-    height: 13vw;
+    height: 15vw;
+}
+
+.tile-img {
+    width: 100%;
+    height: 100%;
 }
 
 .members-type {
@@ -34,4 +39,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media screen and (max-width: 640px) {
+    .tile-img-ctn {
+        width: 100%;
+        height: fit-content;
+        border-radius: 1em;
+    }
+
+    .tile-img {
+        width: 100%;
+        height: 250px;
+        object-fit: contain;
+    }
 }
