--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,11 @@ button, input, select, textarea, option,
     color: black;
 }
 
+button:hover:disabled {
+    background-color: rgba(239, 239, 239, 0.3);
+    cursor: default;
+}
+
 html, body {
     margin: 0;
     /* padding: 10vh 0 0 0; */
@@ -18,6 +23,7 @@ html, body {
 
 #root {
     padding-top: 10vh;
+    height: fit-content;
 }
 
 a {
@@ -31,8 +37,17 @@ img {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Russo One', sans-serif;
     font-weight: 100;
+    filter: drop-shadow(5px 5px 5px darkred);
+    width: fit-content;
 }
 
 /* button, input, textarea, option {
     color: black;
 } */
+
+@media screen and (max-width: 640px) {
+    #root {
+        display: flex;
+        justify-content: center;
+    }
+}
